# Booth_File_Organizer

./: .gitignore  Makefile  README.md  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_types.rs  booth_client.rs  booth_commands.rs  config.rs  database.rs  errors.rs  file_commands.rs  lib.rs  main.rs  process_commands.rs  sync_commands.rs  system_commands.rs  tag_commands.rs  tag_validator.rs
src-tauri/src/repositories/: file_repository.rs  file_tag_repository.rs  mod.rs  tag_repository.rs
src-tauri/src/services/: file_processor.rs  mod.rs
src/components/: FileSearchSection.tsx  FileSyncSection.tsx  ProcessingQueueSection.tsx  UrlInputSection.tsx
