[package]
name = "booth-organizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "booth-organizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "booth_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# [[bin]]
# name = "build-docs"
# path = "../build-docs.rs"


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "7.1", features = ["serde-compat"] }
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
url = "2.5"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

